--- a/interface (copia).glade
+++ b/interface (copia).glade
@@ -1,37 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.18.3 
-
-Copyright (C) 
-
-Copying and distribution of this file, with or without modification,
-are permitted in any medium without royalty provided the copyright
-notice and this notice are preserved.  This file is offered as-is,
-without any warranty.
-
-Author: ediloaz
-
--->
+<!-- Generated with glade 3.18.3 -->
 <interface>
   <requires lib="gtk+" version="3.12"/>
-  <!-- interface-license-type all_permissive -->
-  <!-- interface-authors ediloaz -->
-  <object class="GtkListStore" id="liststore1">
-    <columns>
-      <!-- column-name Text -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">≤</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">=</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">≥</col>
-      </row>
-    </data>
-  </object>
+  <!-- interface-css-provider-path style.css -->
   <object class="GtkApplicationWindow" id="interface">
     <property name="can_focus">False</property>
     <property name="default_width">440</property>
@@ -117,6 +88,7 @@ Author: ediloaz
                       <object class="GtkEntry" id="entry_rest10">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <signal name="delete-event" handler="delete_entry" object="menu" swapped="no"/>
                       </object>
                       <packing>
                         <property name="left_attach">0</property>
@@ -274,6 +246,7 @@ Author: ediloaz
                         <property name="max_length">3</property>
                         <property name="width_chars">2</property>
                         <property name="max_width_chars">3</property>
+                        <property name="secondary_icon_stock">gtk-ok</property>
                         <property name="input_purpose">number</property>
                         <style>
                           <class name="clase_eq10"/>
@@ -286,18 +259,20 @@ Author: ediloaz
                       </packing>
                     </child>
                     <child>
+                      <object class="GtkComboBox" id="combobox1">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                      </object>
+                      <packing>
+                        <property name="left_attach">1</property>
+                        <property name="top_attach">0</property>
+                      </packing>
+                    </child>
+                    <child>
                       <object class="GtkComboBox" id="combobox2">
                         <property name="width_request">8</property>
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext2"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -308,14 +283,6 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox3">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext3"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -326,14 +293,6 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox4">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext4"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -344,14 +303,6 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox5">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext5"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -362,14 +313,6 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox6">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext6"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -380,14 +323,6 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox7">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext7"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -398,14 +333,6 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox8">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext8"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -416,14 +343,6 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox9">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext9"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
@@ -434,37 +353,10 @@ Author: ediloaz
                       <object class="GtkComboBox" id="combobox10">
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext10"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
                       </object>
                       <packing>
                         <property name="left_attach">1</property>
                         <property name="top_attach">9</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkComboBox" id="combobox1">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="model">liststore1</property>
-                        <property name="active">0</property>
-                        <property name="active_id">1</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="top_attach">0</property>
                       </packing>
                     </child>
                   </object>
